# xdns

./: .gitmodules  .gitreview  CHANGELOG.md  CONTRIBUTING.md  Makefile.am  NOTICE  README.md  autogen.sh  configure.ac
.github/: CODEOWNERS
.github/workflows/: L1-tests.yml  native-build.yml
config/: CcspXdns_dm.xml  bbhm_def_cfg_sr213_sl100.xml
cov_docker_script/: README.md  component_config.json  configure_options.conf  run_external_build.sh  run_native_build.sh  run_setup_dependencies.sh
include/: ccsp_xdnsLog_wrapper.h
source/: Makefile.am
source/XdnsSsp/: Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  ssp_messagebus_interface_priv.c
source/dmlxdns/: Makefile.am  cosa_apis.h  cosa_apis_busutil.c  cosa_apis_busutil.h  cosa_apis_util.c  cosa_apis_util.h  cosa_apis_util_priv.c  cosa_dml_api_common.h  cosa_xdns_apis.c  cosa_xdns_apis.h  cosa_xdns_dml.c  cosa_xdns_dml.h  cosa_xdns_webconfig_api.c  cosa_xdns_webconfig_api.h  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h  xdns_comp_helpers.c  xdns_comp_helpers.h  xdns_param.c  xdns_param.h
source/test/: Makefile.am  run_ut.sh
source/test/CcspXdnsDmlTest/: CcspXdnsCosaApiUtilPrivTest.cpp  CcspXdnsCosaApiUtilTest.cpp  CcspXdnsCosaApisTest.cpp  CcspXdnsCosaDmlTest.cpp  CcspXdnsCosaWebconfigApiTest.cpp  CcspXdnsMock.cpp  CcspXdnsMock.h  CcspXdnsPluginMainApisTest.cpp  FopenMock.cpp  FopenMock.h  Makefile.am  gtest_main.cpp
